Fix spacing in song lists on mobile

--- a/static/styles.css
+++ b/static/styles.css
@@ -323,7 +323,8 @@ div.song-info {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    gap: 10px;
+    row-gap: 0px;
+    column-gap: 10px;
     align-items: center;
     flex-grow: 1;
     margin: 5px 0px;
